# serializer version: 1
# name: TestCreate.test_ok
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'fred',
    'id': 3,
    'last_password_change': 'approximately_now_isoformat',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_ok[location]
  '/users/3'
# ---
# name: TestCreateFirstUser.test_ok
  dict({
    'active': True,
    'administrator_role': 'full',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'fred',
    'id': 1,
    'last_password_change': 'approximately_now_isoformat',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreateFirstUser.test_user_already_exists
  dict({
    'id': 'conflict',
    'message': 'Virtool already has at least one user',
  })
# ---
# name: TestGet.test_get
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'gaffers',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'johnsoncynthia',
    'id': 2,
    'last_password_change': 'approximately_now_isoformat',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'musicians',
    }),
  })
# ---
# name: TestUpdate.test_non_existent_primary_group
  dict({
    'id': 'bad_request',
    'message': 'User is not a member of group',
  })
# ---
# name: TestUpdate.test_not_a_member_of_primary_group
  dict({
    'id': 'bad_request',
    'message': 'User is not a member of group',
  })
# ---
# name: TestUpdate.test_not_found
  dict({
    'id': 'not_found',
    'message': 'User does not exist',
  })
# ---
# name: TestUpdate.test_ok
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': True,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'johnsoncynthia',
    'id': 2,
    'last_password_change': 'approximately_now_isoformat',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'musicians',
    }),
  })
# ---
# name: TestUpdate.test_short_password
  dict({
    'id': 'bad_request',
    'message': 'Password does not meet minimum length requirement (8)',
  })
# ---
# name: TestUpdate.test_with_groups
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': True,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'gaffers',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'johnsoncynthia',
    'id': 2,
    'last_password_change': 'approximately_now_isoformat',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    }),
    'primary_group': None,
  })
# ---
# name: test_find[None]
  dict({
    'documents': list([
      dict({
        'active': True,
        'administrator_role': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'laura56',
        'id': 2,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator_role': 'full',
        'force_reset': False,
        'groups': list([
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'leeashley',
        'id': 1,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator_role': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'sjohnson',
        'id': 3,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find[fred]
  dict({
    'documents': list([
      dict({
        'active': True,
        'administrator_role': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'fred',
        'id': 2,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
